--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,9 @@
 // Mixins in here
+@bcolor: #4CAF50;
+
+.button-look {
+    // border-radius: 10%;
+    // background-color:darkcyan;
+    color: red;
+    // border: 2px solid @bcolor;
+}
