--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,4 +1,34 @@
+@under_section: 2px dashed @navigation-border;
+@standard_padding: 3%;
+
 .home {
+
+  .header{
+    border-bottom: @under_section;
+    padding-bottom: @standard_padding;
+
+    .img-content{
+      padding-bottom: 3%;
+    }
+
+    .navigation-panel{
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: @standard_padding;
+      border-bottom: @under_section;
+      width: 100%;
+
+      h5{
+        font-size: 3.5rem;
+      }
+      .nav{
+        box-align: right;
+        display:flex;
+        color: red;
+      }
+    }
+    
+  }
 
   .content-section {
     margin: 30px 0;
@@ -6,8 +36,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+  
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -57,5 +86,11 @@
       width: 30%;
       margin-bottom: 30px;
     }
+
+
   }
+  .btn{
+    @button-look();
+  }
+ 
 }// home
