--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,19 @@
+@under _section= 2px dashed #C0C0C0;
 .button-look {
-  border-radius: 10%;
+  border-radius: 15px;
+  width: 80%;
   background-color: darkcyan;
-  color: red;
-  border: 2px solid #4CAF50;
+  padding: 3%;
+  color: white;
+  font-size: 150%;
+  font-weight: bold;
+  text-align: center;
+  border: 2px solid darkcyan;
+}
+.flex-column-wrap {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -174,7 +185,47 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-@under _section= 2px dashed #C0C0C0;
+.navigation-panel {
+  padding-top: 3%;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 3%;
+  border-bottom: 2px dashed #C0C0C0;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .navigation-panel {
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    padding-bottom: 3%;
+  }
+}
+.navigation-panel h5 {
+  font-size: 3.5rem;
+}
+.navigation-panel nav {
+  box-align: right;
+  display: flex;
+}
+@media (max-width: 500px) {
+  .navigation-panel nav {
+    display: flex;
+  }
+}
+.navigation-panel nav a {
+  text-decoration: none;
+  color: black;
+  padding-right: 60px;
+  font-weight: bold;
+  font-size: 150%;
+}
+@media (max-width: 500px) {
+  .navigation-panel nav a {
+    padding-top: 3%;
+    padding-left: 3%;
+  }
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -186,27 +237,17 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+@media (max-width: 500px) {
+  .home {
+    padding: 3%;
+  }
+}
 .home .header {
   border-bottom: 2px dashed #C0C0C0;
   padding-bottom: 3%;
 }
 .home .header .img-content {
   padding-bottom: 3%;
-}
-.home .header .navigation-panel {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 3%;
-  border-bottom: 2px dashed #C0C0C0;
-  width: 100%;
-}
-.home .header .navigation-panel h5 {
-  font-size: 3.5rem;
-}
-.home .header .navigation-panel .nav {
-  box-align: right;
-  display: flex;
-  color: red;
 }
 .home .content-section {
   margin: 30px 0;
@@ -218,12 +259,27 @@ img {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content img {
+    width: 100%;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -233,13 +289,28 @@ img {
   padding-left: 1%;
   padding-right: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .text-content {
+    order: -1;
+  }
+}
 .home .inverse-content .img-content {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    width: 100%;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -250,7 +321,38 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+.home .btn {
+  border-radius: 15px;
+  width: 80%;
+  background-color: darkcyan;
+  padding: 3%;
+  color: white;
+  font-size: 150%;
+  font-weight: bold;
+  text-align: center;
+  border: 2px solid darkcyan;
+}
+@media (max-width: 500px) {
+  .home .btn {
+    width: 70%;
+    padding: 3%;
+  }
 }
