--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,3 +1,50 @@
 // Navigation Styles here
-@under_section= 2px dashed @navigation-border;
+
+@media @mobile{
+
+}
+
+.navigation-panel{
+    padding-top: @standard_padding;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: @standard_padding;
+    border-bottom: @under_section;
+    width: 100%;
+
+    @media @mobile{
+      flex-wrap: wrap;
+      width: 100%;
+      justify-content: center;
+      padding-bottom: @standard_padding;
+    }
+   
+    h5{
+      font-size: 3.5rem;
+    }
+
+    nav{
+      box-align: right;
+      display:flex;
+
+      @media @mobile{
+        display:flex;
+      }
+   
+      a {
+        text-decoration: none;
+        color: black;
+        padding-right: 60px;
+        font-weight: bold;  
+        font-size: 150%;  
+
+        @media @mobile{
+          padding-top: @standard_padding;
+          padding-left: @standard_padding;
+        }
+    }
+}
+}
+
+
 
