--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,11 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+//view
+@mobile: ~"(max-width: 500px)";
+
+@under_section: 2px dashed @navigation-border;
+@standard_padding: 3%;
+
+@under_section= 2px dashed @navigation-border;
